--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,3 @@
-# Copie e cole a pasta .docker e o arquivo docker-compose.yml na raiz de seu App
-# Ajuste as propriedades "ports" e "container_name" evitando conflitos com outros containers
-# Execute no terminal o comando: "docker-compose up -d"
-# NOTA: O PHP Composer é executado no terminal do container do service app (myapp-php)
-
 version: "3.7"
 services:
   app:
@@ -22,27 +17,27 @@ services:
       - net
 
   db:
-    image: mysql:5.7
-    container_name: myapp-mysql # no código de seu App utilize o nome do container na URL de conexão
+    image: mysql:5.7.28
+    container_name: myapp-mysql
     restart: unless-stopped
     ports:
-      - "3399:3306" # define a porta local onde vai rodar o mysql, neste caso 3399 (localhost:3399)
+      - "3306:3306"
     volumes:
       - ./.docker/repository/mysql:/var/lib/mysql
     environment:
-      MYSQL_DATABASE: "db_myapp" # caso use arquivo .env substitua por: ${DB_DATABASE}
-      MYSQL_ROOT_PASSWORD: "root" # caso use arquivo .env substitua por: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     networks:
       - net
 
   nginx:
-    image: nginx:alpine
+    image: nginx:1.19.10-alpine
     container_name: myapp-nginx
     restart: unless-stopped
     ports:
-      - "8099:80" # define a porta local onde vai rodar seu App, neste caso 8099 (localhost:8099).
+      - "8080:80"
     volumes:
       - ./:/var/www
       - ./.docker/nginx:/etc/nginx/conf.d/
