--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,12 @@
-version: "3.7"
 services:
   app:
     build:
       args:
-        user: sammy
+        user: edumanoel
         uid: 1000
       context: ./
       dockerfile: ./.docker/php/Dockerfile
-    image: laravel
-    container_name: myapp-php
+    container_name: ${APP_NAME}_app
     restart: unless-stopped
     working_dir: /var/www/
     volumes:
@@ -18,26 +16,23 @@ services:
 
   db:
     image: mysql:5.7.28
-    container_name: myapp-mysql
+    container_name: ${APP_NAME}_db
     restart: unless-stopped
     ports:
-      - "3306:3306"
+      - "${DB_PORT}:3306"
     volumes:
       - ./.docker/repository/mysql:/var/lib/mysql
     environment:
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
     networks:
       - net
 
   nginx:
     image: nginx:1.19.10-alpine
-    container_name: myapp-nginx
+    container_name: ${APP_NAME}_web
     restart: unless-stopped
     ports:
-      - "8080:80"
+      - "${APP_PORT}:80"
     volumes:
       - ./:/var/www
       - ./.docker/nginx:/etc/nginx/conf.d/
