--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-/.docker/repository/
-/.vagrant
-/node_modules
-/public/hot
-/public/storage
-/public_html/hot
-/public_html/storage
-/storage/*.key
-/vendor
+.docker/repository/
+.vagrant
+node_modules
+public/hot
+public/storage
+public_html/hot
+public_html/storage
+storage/*.key
+src/vendor
+.vendor
 .env
 .phpunit.result.cache
 Homestead.json
