add email configuration to .env.example and enhance email sending functionality

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@ APP_NAME=myapp
 APP_PORT=8000
 DB_PORT=3306
 DB_ROOT_PASSWORD=root
+
+EMAIL_SMTP_SECURE=tls
+EMAIL_SMTP_AUTH=true
+EMAIL_HOST="smtp.youserver.com"
+EMAIL_PORT=587
+EMAIL_USERNAME="username@youserver.com"
+EMAIL_PASSWORD="password"
+EMAIL_ADDRESS="username@youserver.com"
