refactor email sending functionality to use environment variables and improve error handling in contact form submission

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_PORT=8000
 DB_PORT=3306
 DB_ROOT_PASSWORD=root
 
+EMAIL_SMTP_DEBUG=0
 EMAIL_SMTP_SECURE=tls
 EMAIL_SMTP_AUTH=true
 EMAIL_HOST="smtp.youserver.com"
