add user creation functionality with form validation and database connection

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
+# docker-compose configuration
 APP_NAME=myapp
 APP_PORT=8000
 DB_PORT=3306
 DB_ROOT_PASSWORD=root
-
+# app connect to database configuration
+DB_HOST=localhost
+DB_DATABASE=myapp
+DB_USERNAME=root
+DB_PASSWORD=root
+# app send mail configuration
 EMAIL_SMTP_DEBUG=0
 EMAIL_SMTP_SECURE=tls
 EMAIL_SMTP_AUTH=true
